Env-Management/curlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
    - name: curlpod
      image: ubuntu

      command:
      - sh
      - -c
      - while true; do sleep 1; done
