Env-Management/block-other-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: prod
  name: block-other-namespace
spec:
  podSelector: {}  # Matches all pods in the prod namespace
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector: {}  # Allows traffic only from pods in the same namespace
